This is the completed version

--- a/index.html
+++ b/index.html
@@ -116,12 +116,28 @@
    </div>
    
 
-
-
-
+   <form>
+    <div>
+      <label for="story">Share Your Story:</label><br>
+      <textarea id="story" name="story" rows="8" cols="40" placeholder="Write your story here..."></textarea>
+    </div>
+    <br>
+    <div>
+      <label for="rating">Rate the Story:</label><br>
+      <select id="rating" name="rating">
+        <option value="good">Good</option>
+        <option value="excellent">Excellent</option>
+        <option value="outstanding">Outstanding</option>
+        <option value="other">Other</option>
+      </select>
+    </div>
+    <br>
+    <input type="submit" value="Submit">
+  </form>
+  
 
    <footer>
-
+    <p style="text-align: center; font-weight: bold; background-color: white;"><small>&copy;All rights belong to Tuhin</small></p>
    </footer>
 </body>
 </html>
